Add port to env

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ ONLINE_MONGODB_FIRST="mongodb+srv://papioza10:papio555@cluster1.zlmnofi.mongodb.
 ONLINE_MONGODB_SECOND="?retryWrites=true&w=majority"
 SECRET_KEY="pigPROJECT"
 
+
+
+PORT=8080
